[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/Yagitudeh.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/UI_Button_1.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/UI_Button_Down.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/UI_Button_Hovered.png" type="Texture" id=4]
[ext_resource path="res://assets/art/background.png" type="Texture" id=5]
[ext_resource path="res://menus/main_menu/main_menu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=9]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 128, 64 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 601.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.196078, 0.0352941, 0.172549, 0.52549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 99.0
margin_right = 512.0
margin_bottom = 237.0
custom_fonts/font = SubResource( 9 )
text = "Garden Madness"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -61.0
margin_right = 148.0
margin_bottom = 235.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Buttons"]
margin_right = 296.0
margin_bottom = 68.0
rect_min_size = Vector2( 80, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="Buttons"]
margin_top = 76.0
margin_right = 296.0
margin_bottom = 144.0
rect_min_size = Vector2( 80, 64 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Buttons"]
margin_top = 152.0
margin_right = 296.0
margin_bottom = 220.0
rect_min_size = Vector2( 80, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
text = " Options "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 228.0
margin_right = 296.0
margin_bottom = 296.0
rect_min_size = Vector2( 80, 64 )
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 5 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
